--- a/masquerade.html
+++ b/masquerade.html
@@ -35,6 +35,7 @@
 				<li><a href="#overview">Overview</a></li>
 				<li><a href="#masks">Masks</a></li>
 				<li><a href="#mixers">Mixers</a></li>
+				<li><a href="#maskedtext">Masked Text</a></li>
 				<li><a href="#examples">Examples</a></li>
 			</ul></nav>
 		</div><div class="three-quarters">
@@ -103,11 +104,17 @@
 				</div></div>
 			</div>
 			
+			<!-- MASKED TEXT -->
+			<h3 class="tensile-text maranatha" id="maskedtext"><strong>Masked Text</strong></h3>
+			<div class="pad">
+				<p class="clamp-text">We can "mask" text to make it take on a background image. This is useful if we want to add texture and depth to text headings. Simply apply the class <strong><em>.mask-text</em></strong> to any text element!<br /><br />Below are some examples using wallpapers:</p>
+				<h4 class="tensile-text-h1 etruscan mask-text wallpaper carved tiled-x">Masked Text</h4>
+				<h4 class="tensile-text-h1 bunching mask-text wallpaper cloudy tiled bs-120">Masked Text</h4>
+				<h4 class="tensile-text-h1 blaka mask-text wallpaper rhombus-wall cover">Masked Text</h4>
+			</div>
+			
 			<!-- EXAMPLES -->
 			<h3 class="tensile-text maranatha" id="examples"><strong>Examples</strong></h3>
-			<div class="pad">
-				<p class="clamp-text"></p>
-			</div>
 
 		</div></div>
 	</div>
