--- a/masquerade.html
+++ b/masquerade.html
@@ -109,12 +109,26 @@
 			<div class="pad">
 				<p class="clamp-text">We can "mask" text to make it take on a background image. This is useful if we want to add texture and depth to text headings. Simply apply the class <strong><em>.mask-text</em></strong> to any text element!<br /><br />Below are some examples using wallpapers:</p>
 				<h4 class="tensile-text-h1 etruscan mask-text wallpaper carved tiled-x">Masked Text</h4>
-				<h4 class="tensile-text-h1 bunching mask-text wallpaper cloudy tiled bs-120">Masked Text</h4>
+				<p class="spacebar"></p>
+				<h4 class="tensile-text-h1 bunching mask-text wallpaper cloudy tiled bs-120" style="line-height: 140%;">Masked Text</h4>
 				<h4 class="tensile-text-h1 blaka mask-text wallpaper rhombus-wall cover">Masked Text</h4>
 			</div>
 			
 			<!-- EXAMPLES -->
 			<h3 class="tensile-text maranatha" id="examples"><strong>Examples</strong></h3>
+			<div class="pad">
+				<p class="clamp-text">Let's take a look at some examples using combined elements.</p>
+				<p class="spacebar"></p>
+				<h4><strong>Example 1:<em>Maskception (Nested Masks)</em></strong></h4>
+				<p>In this example, we have masked text nested within a patterned mask, which is nested within a wallpapered mask.</p>
+				<div class="mask squeeze wallpaper tiled cloudy bs-240 trellis-grid full-h">
+					<div class="mask scallop half half-h center pattern tiled smeared bs-120" style="background-color: var(--other);">
+						<h3 class="tensile-text-h2 center mask-text bradley-gratis wallpaper tiled bs-90 awaiting-blossoms">Bradley</h3>
+					</div>
+				</div>
+				<p class="spacebar"></p>
+				
+			</div>
 
 		</div></div>
 	</div>
