--- a/masquerade.html
+++ b/masquerade.html
@@ -5,11 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
 	
 	<title>Masquerade</title>
-	<meta name="description" content="Create dynamic and responsive layouts using multiple methods." />	
+	<meta name="description" content="Mask shapes and text and CSS mix-blends." />	
 
 	<!-- CORE CSS  -->
 	<link href="css/contrive.css" type="text/css" rel="stylesheet" media="all"/>
-	<link href="css/theme.css" type="text/css" rel="stylesheet" media="all"/>
 
 </head>
 <body>
