--- a/ornaments.html
+++ b/ornaments.html
@@ -4,11 +4,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
 	<title>Ornaments</title>
-	<meta name="description" content="" />
+	<meta name="description" content="Decorative wallpapers, patterns, and accent elements using CSS and masking." />
 	
 	<!-- CORE CSS  -->
 	<link href="css/contrive.css" type="text/css" rel="stylesheet" media="all"/>
-	<link href="css/theme.css" type="text/css" rel="stylesheet" media="all"/>
 	<style>
 	.trellis-grid>.lace {
 		margin: 0.75rem; border-top: 2px solid #f2f2f2; border-bottom: 2px solid #f2f2f2;
