--- a/typography.html
+++ b/typography.html
@@ -4,11 +4,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
 	<title>Typography</title>
-	<meta name="description" content="" />
+	<meta name="description" content="Typography utility classes with custom fonts, drop-caps, and lists." />
 	
 	<!-- CORE CSS  -->
 	<link href="css/contrive.css" type="text/css" rel="stylesheet" media="all"/>
-	<link href="css/theme.css" type="text/css" rel="stylesheet" media="all"/>
 	<style>
 		.columnize ul, .columnize ol {margin-top: 0;}
 	</style>
