--- a/palette.html
+++ b/palette.html
@@ -4,11 +4,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
 	<title>Palette</title>
-	<meta name="description" content="" />
+	<meta name="description" content="Color scheme library." />
 	
 	<!-- CORE CSS  -->
 	<link href="css/contrive.css" type="text/css" rel="stylesheet" media="all"/>
-	<link href="css/theme.css" type="text/css" rel="stylesheet" media="all"/>
 
 </head>
 <body>
