--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- CORE CSS  -->
 	<link href="css/contrive.css" type="text/css" rel="stylesheet" media="all"/>
 	<style>
-		.blocklink {height: 50vh; max-height: 230px; text-align: center;
+		.lattice-grid .blocklink {height: 50vh; max-height: 230px; text-align: center;
 			display:flex; align-items: center; justify-content: center;
 			flex-direction: column; font-size: 1.5rem; border: 0.75rem double var(--accent);
 			-webkit-border-radius: 1rem; border-radius: 1rem; transition: 0.4s;
@@ -30,17 +30,38 @@
 		<h2 class="caslon clamp-text delayed flip-in">An elegant framework for the Baroque style of design, built with HTML, CSS, and javascript.</h2>
 	</header>
 </div>
+<div style="background: var(--primary); color: var(--secondary);">
 <p class="spacebar"></p>
-<div class="lattice-grid gaps wrapped col-2 caslon">
-	<div class="blocklink">
+<div class="trellis-grid row wrapped caslon">
+	<div class="third center" style="display:flex; align-items: center; justify-content: center; flex-direction: column;">
 		<h3 class="floating">Version<br /><span class="tensile-text-h2 bradley-gratis">1.0</span></h3>
-	</div>
-	<div class="blocklink">
+		
 		<a href="https://www.baroquest.com/framework/versions/baroquest_framework_1.0.zip" target="_blank" class="baldur-btn">
 			<span class="btn-text">Downlaod</span>
 			<span class="btn-bg"></span><span class="btn-b"></span>
 		</a>
 	</div>
+	<div class="scroll-fancy fade-in two-thirds">
+		<h3 class="tensile-text-h4 bradley-gratis" style="margin: 0;">Fancy Features</h3>
+		<ul class="clamp-text check columnize col-2 sequence-scroll left-align">
+			<li><strong>30</strong> custom fonts</li>
+			<li><strong>23</strong> color palettes</li>
+			<li><strong>3</strong> grid methods</li>
+			<li><strong>10</strong> CSS mask shapes</li>
+			<li><strong>50</strong> seamless wallpaper backgrounds</li>
+			<li><strong>40</strong> seamless pattern backgrounds</li>
+			<li><strong>30</strong> ornamental accents</li>
+			<li><strong>7</strong> lace accent patterns</li>
+			<li><strong>14</strong> frames</li>
+			<li><strong>12</strong> seal styles</li>
+			<li><strong>12</strong> scroll-triggered effects</li>
+			<li><strong>10</strong> entrance animations</li>
+		</ul>
+		<p class="spacebar"></p>
+	</div>
+</div></div>
+<p class="spacebar"></p>
+<div class="lattice-grid gaps wrapped col-2 caslon">
 	<a href="contrive.html" class="blocklink span-2 scroll-fancy fade-in">
 		<h4>Contrive-CORE</h4>
 		<p class="caslon">General overview and getting started with BF.</p>
@@ -76,6 +97,7 @@
 		<p class="caslon center clamp-text">&copy;<a href="https://www.baroquest.com" target="_blank">Baroquest Framework</a>. | <a href="https://github.com/pinecreativelabs/Baroquest-Framework" target="_blank">Github</a></p>
 	</footer>
 </div>
+<script src="js/sequence-scroll.js"></script>
 <script src="js/jquery.3.js"></script>
 <script src="js/scroll-fancy.js"></script>
 </body>
