--- a/ornaments.html
+++ b/ornaments.html
@@ -51,7 +51,7 @@
 						<h3 class="tensile-text-h5 rotunda" id="intro">Overview</h3>
 						<p class="clamp-text"><em>Ornaments</em> is a decorative classes library that uses images and fancy CSS to further enhance and enlighten elements. These include:</p>
 						<ul class="diamond clamp-text">
-							<li>Wallpapers &amp; Patterns</li><li>Accents</li><li>Dividers</li><li>Frames</li><li>Seals</li>
+							<li>Wallpapers &amp; Patterns</li><li>Accents</li><li>Frames</li><li>Seals</li>
 						</ul>
 					</div>
 					
