--- a/ornaments.html
+++ b/ornaments.html
@@ -33,7 +33,10 @@
 	</div><div class="three-quarters bradley">
 		
 		<div class="trellis-grid row"><div class="full">
-			<header class="pad"><h2 class="tensile-text-h3 rotunda"><em>Ornaments</em></h2></header>
+			<header class="pad">
+				<div class="accent redemption float-left delayed grow-in" style="width: 10%; margin-top: 3em; background-color: var(--primary);"></div>
+				<h2 class="tensile-text-h3 rotunda"><em>Ornaments</em></h2>
+			</header>
 		</div><div class="quarter">
 			<nav class="piano caslon stuck"><ul class="pianonav">
 				<li><a href="#intro">Overview</a></li>
