--- a/palette.html
+++ b/palette.html
@@ -27,7 +27,10 @@
 		</div>
 	</div><div class="three-quarters bradley">
 		<div class="trellis-grid row"><div class="full">
-			<header class="pad"><h2 class="tensile-text-h3 rotunda"><em>Palette</em></h2></header>
+			<header class="pad">
+				<div class="accent carving float-left delayed grow-in" style="margin-top: 2.5em; width: 10%; background-color: var(--primary);"></div>
+				<h2 class="tensile-text-h3 rotunda"><em>Palette</em></h2>
+			</header>
 		</div><div class="quarter">
 			<nav class="piano caslon stuck"><ul class="pianonav">
 				<li><a href="#overview">Overview &amp; Usage</a></li>
