--- a/typography.html
+++ b/typography.html
@@ -29,7 +29,10 @@
 		</div>
 	</div><div class="three-quarters bradley">
 		<div class="trellis-grid row"><div class="full">
-			<header class="pad"><h2 class="tensile-text-h3 rotunda"><em>Typography</em></h2></header>
+			<header class="pad">
+				<div class="accent squire float-left delayed grow-in" style="margin-top: 1em; width: 10%; background-color: var(--primary);"></div>
+				<h2 class="tensile-text-h3 rotunda"><em>Typography</em></h2>
+			</header>
 		</div><div class="quarter">
 			<nav class="piano caslon stuck"><ul class="pianonav">
 				<li><a href="#general">General</a></li>
