--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<!-- CORE CSS  -->
 	<link href="css/contrive.css" type="text/css" rel="stylesheet" media="all"/>
 	<style>
+		header {position: relative;}
 		.lattice-grid .blocklink {height: 50vh; max-height: 230px; text-align: center;
 			display:flex; align-items: center; justify-content: center;
 			flex-direction: column; font-size: 1.5rem; border: 0.75rem double var(--accent);
@@ -17,6 +18,8 @@
 		}
 		a.blocklink:link,.blocklink:visited {color: var(--secondary);}
 		a.blocklink:hover {color: var(--primary); background: var(--accent);}
+		.blocklink .accent {background-color: var(--secondary);}
+		.blocklink:hover .accent{background-color: var(--primary);}
 		.blocklink h4 {font-size: 2.5rem; font-weight: 900;}
 		footer {background-color: var(--secondary); color: var(--primary);}
 		footer a:link, footer a:visited {color: var(--accent); border-bottom: 2px dotted var(--accent);}
@@ -28,6 +31,8 @@
 	<header class="pad center full">
 		<h1 class="tensile-text-h3 rotunda blur-in">Baroquest<br />Framework</h1>
 		<h2 class="caslon clamp-text delayed flip-in">An elegant framework for the Baroque style of design, built with HTML, CSS, and javascript.</h2>
+		<div class="accent micro t-l influence flip-y"></div><div class="accent micro t-r influence flip-xy"></div>
+		<div class="accent micro b-l influence"></div><div class="accent micro b-r influence flip-x"></div>
 	</header>
 </div>
 <div style="background: var(--primary); color: var(--secondary);">
@@ -63,30 +68,37 @@
 <p class="spacebar"></p>
 <div class="lattice-grid gaps wrapped col-2 caslon">
 	<a href="contrive.html" class="blocklink span-2 scroll-fancy fade-in">
+		<div class="accent small grandiose"></div>
 		<h4>Contrive-CORE</h4>
 		<p class="caslon">General overview and getting started with BF.</p>
 	</a>
 	<a href="typography.html" class="blocklink scroll-fancy slide-left">
+		<div class="accent small squire"></div>
 		<h4>Typography</h4>
 		<p class="caslon">General typography utility classes library.</p>
 	</a>
 	<a href="ltc-grid.html" class="blocklink scroll-fancy slide-right">
+		<div class="accent small growth"></div>
 		<h4>LTC Grid</h4>
 		<p class="caslon">Grid system using CSS grid and Flexbox.</p>
 	</a>
 	<a href="palette.html" class="blocklink scroll-fancy slide-left">
+		<div class="accent small carving"></div>
 		<h4>Palette</h4>
 		<p class="caslon">Color scheme library using CSS variables.</p>
 	</a>
 	<a href="masquerade.html" class="blocklink scroll-fancy slide-right">
+		<div class="accent small majesty"></div>
 		<h4>Masquerade</h4>
 		<p class="caslon">Mask shapes and mix-blends for fancy facades.</p>
 	</a>
 	<a href="ornaments.html" class="blocklink scroll-fancy slide-left">
+		<div class="accent small redemption"></div>
 		<h4>Ornaments</h4>
 		<p class="caslon">Decorative wallpapers, patterns, and accent elements.</p>
 	</a>
 	<a href="movements.html" class="blocklink scroll-fancy slide-right">
+		<div class="accent small sensuous"></div>
 		<h4>Movements</h4>
 		<p class="caslon">Scroll-triggered motions and other animations.</p>
 	</a>
