--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		<p class="caslon">Mask shapes and mix-blends for fancy facades.</p>
 	</a>
 	<a href="ornaments.html" class="blocklink scroll-fancy slide-left">
-		<div class="accent small redemption"></div>
+		<div class="accent small overarch"></div>
 		<h4>Ornaments</h4>
 		<p class="caslon">Decorative wallpapers, patterns, and accent elements.</p>
 	</a>
