--- a/palette.html
+++ b/palette.html
@@ -140,6 +140,14 @@
 						<li style="background: var(--accent);"><span>--accent</span></li>
 						<li style="background: var(--other);"><span>--other</span></li>
 					</ul>
+					<h3 class="maranatha"><strong>.gothic-rose</strong></h3>
+					<ul class="swatch gothic-rose">
+						<li style="background: var(--primary);"><span>--primary</span></li>
+						<li style="background: var(--secondary);"><span>--secondary</span></li>
+						<li style="background: var(--tertiary);"><span>--tertiary</span></li>
+						<li style="background: var(--accent);"><span>--accent</span></li>
+						<li style="background: var(--other);"><span>--other</span></li>
+					</ul>
 					<h3 class="maranatha"><strong>.inspire</strong></h3>
 					<ul class="swatch inspire">
 						<li style="background: var(--primary);"><span>--primary</span></li>
