--- a/palette.html
+++ b/palette.html
@@ -100,6 +100,14 @@
 						<li style="background: var(--accent);"><span>--accent</span></li>
 						<li style="background: var(--other);"><span>--other</span></li>
 					</ul>
+					<h3 class="maranatha"><strong>.dark-fantasy</strong></h3>
+					<ul class="swatch dark-fantasy">
+						<li style="background: var(--primary);"><span>--primary</span></li>
+						<li style="background: var(--secondary);"><span>--secondary</span></li>
+						<li style="background: var(--tertiary);"><span>--tertiary</span></li>
+						<li style="background: var(--accent);"><span>--accent</span></li>
+						<li style="background: var(--other);"><span>--other</span></li>
+					</ul>
 					<h3 class="maranatha"><strong>.dusk</strong></h3>
 					<ul class="swatch dusk">
 						<li style="background: var(--primary);"><span>--primary</span></li>
@@ -148,6 +156,14 @@
 						<li style="background: var(--accent);"><span>--accent</span></li>
 						<li style="background: var(--other);"><span>--other</span></li>
 					</ul>
+					<h3 class="maranatha"><strong>.haunted</strong></h3>
+					<ul class="swatch haunted">
+						<li style="background: var(--primary);"><span>--primary</span></li>
+						<li style="background: var(--secondary);"><span>--secondary</span></li>
+						<li style="background: var(--tertiary);"><span>--tertiary</span></li>
+						<li style="background: var(--accent);"><span>--accent</span></li>
+						<li style="background: var(--other);"><span>--other</span></li>
+					</ul>
 					<h3 class="maranatha"><strong>.inspire</strong></h3>
 					<ul class="swatch inspire">
 						<li style="background: var(--primary);"><span>--primary</span></li>
@@ -190,6 +206,14 @@
 					</ul>
 					<h3 class="maranatha"><strong>.nudist</strong></h3>
 					<ul class="swatch nudist">
+						<li style="background: var(--primary);"><span>--primary</span></li>
+						<li style="background: var(--secondary);"><span>--secondary</span></li>
+						<li style="background: var(--tertiary);"><span>--tertiary</span></li>
+						<li style="background: var(--accent);"><span>--accent</span></li>
+						<li style="background: var(--other);"><span>--other</span></li>
+					</ul>
+					<h3 class="maranatha"><strong>.organic</strong></h3>
+					<ul class="swatch organic">
 						<li style="background: var(--primary);"><span>--primary</span></li>
 						<li style="background: var(--secondary);"><span>--secondary</span></li>
 						<li style="background: var(--tertiary);"><span>--tertiary</span></li>
