--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<h3 class="tensile-text-h4 bradley-gratis" style="margin: 0;">Fancy Features</h3>
 		<ul class="clamp-text check columnize col-2 sequence-scroll left-align">
 			<li><strong>30</strong> custom fonts</li>
-			<li><strong>23</strong> color palettes</li>
+			<li><strong>27</strong> color palettes</li>
 			<li><strong>3</strong> grid methods</li>
 			<li><strong>10</strong> CSS mask shapes</li>
 			<li><strong>50</strong> seamless wallpaper backgrounds</li>
@@ -104,11 +104,20 @@
 	</a>
 </div>
 <p class="spacebar"></p>
-<div class="trellis-grid">
-	<footer class="pad center full">
-		<p class="caslon center clamp-text">&copy;<a href="https://www.baroquest.com" target="_blank">Baroquest Framework</a>. | <a href="https://github.com/pinecreativelabs/Baroquest-Framework" target="_blank">Github</a></p>
-	</footer>
-</div>
+<footer style="padding: 1em 0 2.5em 0;">
+<div class="trellis-grid wrapped row">
+	<div class="pad left-align two-thirds">
+		<p class="caslon clamp-text" style="border-bottom: 1px solid var(--accent); padding: 0 0 1.33em 0;"><a href="https://github.com/pinecreativelabs/Baroquest-Framework" target="_blank">Github</a></p>
+		<p class="caslon">&copy;<a href="https://www.baroquest.com" target="_blank">Baroquest Framework</a>. A <a href="https://www.pinecreativelabs.com" target="_blank">Pine Creative Labs</a> production.</p>
+	</div><div class="pad third left-align">
+		<h5 class="caslon">BONUS TEMPLATES</h5>
+		<p style="font-size: 1.25rem; font-weight: 600;">
+			<a href="gothic-grotesque.html" target="_blank">Gothic Grotesque</a><br />
+			<a href="organic-nature.html" target="_blank">Organic Nature</a><br />
+			<a href="victorian-vintage.html" target="_blank">Victorian Vintage</a>
+		</p>
+	</div>
+</div></footer>
 <script src="js/sequence-scroll.js"></script>
 <script src="js/jquery.3.js"></script>
 <script src="js/scroll-fancy.js"></script>
