--- a/organic-nature.html
+++ b/organic-nature.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
 	
 	<title>Organic Nature</title>
-	<meta name="description" content="An exemplary example of the gothic grotesque substyle." />
+	<meta name="description" content="An exemplary example of the organic nature substyle." />
 
 	<!-- CORE CSS  -->
 	<link href="css/contrive.css" type="text/css" rel="stylesheet" media="all"/>
