--- a/ornaments.html
+++ b/ornaments.html
@@ -113,7 +113,7 @@
 							<li class="tossed-vines"><span>.tossed-vines</span></li>
 							<li class="uncovering"><span>.uncovering</span></li>
 							<li class="vibrant-mix"><span>.vibrant-mix</span></li>
-							<li class="victoran-lace"><span>.victoran-lace</span></li>
+							<li class="victorian-lace"><span>.victorian-lace</span></li>
 							<li class="vine-panels"><span>.vine-panels</span></li>
 							<li class="volary-vogue"><span>.volary-vogue</span></li>
 							<li class="warmth"><span>.warmth</span></li>
