--- a/index.html
+++ b/index.html
@@ -106,16 +106,16 @@
 <p class="spacebar"></p>
 <footer style="padding: 1em 0 2.5em 0;">
 <div class="trellis-grid wrapped row">
-	<div class="pad left-align two-thirds">
-		<p class="caslon clamp-text" style="border-bottom: 1px solid var(--accent); padding: 0 0 1.33em 0;"><a href="https://github.com/pinecreativelabs/Baroquest-Framework" target="_blank">Github</a></p>
-		<p class="caslon">&copy;<a href="https://www.baroquest.com" target="_blank">Baroquest Framework</a>. A <a href="https://www.pinecreativelabs.com" target="_blank">Pine Creative Labs</a> production.</p>
-	</div><div class="pad third left-align">
+	<div class="pad third left-align">
 		<h5 class="caslon">BONUS TEMPLATES</h5>
 		<p style="font-size: 1.25rem; font-weight: 600;">
 			<a href="gothic-grotesque.html" target="_blank">Gothic Grotesque</a><br />
 			<a href="organic-nature.html" target="_blank">Organic Nature</a><br />
 			<a href="victorian-vintage.html" target="_blank">Victorian Vintage</a>
 		</p>
+	</div><div class="pad left-align two-thirds">
+		<p class="caslon clamp-text" style="border-bottom: 1px solid var(--accent); padding: 0 0 1.33em 0;"><a href="https://github.com/pinecreativelabs/Baroquest-Framework" target="_blank">Github</a></p>
+		<p class="caslon">&copy;<a href="https://www.baroquest.com" target="_blank">Baroquest Framework</a>. A <a href="https://www.pinecreativelabs.com" target="_blank">Pine Creative Labs</a> production.</p>
 	</div>
 </div></footer>
 <script src="js/sequence-scroll.js"></script>
