--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 		<p style="font-size: 1.25rem; font-weight: 600;">
 			<a href="gothic-grotesque.html" target="_blank">Gothic Grotesque</a><br />
 			<a href="organic-nature.html" target="_blank">Organic Nature</a><br />
-			<a href="victorian-vintage.html" target="_blank">Victorian Vintage</a>
+			<a href="victorian-vintage.html" target="_blank">Victorian Vintage</a><br />
+			<a href="mannerist-avant-garde.html" target="_blank">Mannerist Avant-Garde</a>
 		</p>
 	</div><div class="pad left-align two-thirds">
 		<p class="caslon clamp-text" style="border-bottom: 1px solid var(--accent); padding: 0 0 1.33em 0;"><a href="https://github.com/pinecreativelabs/Baroquest-Framework" target="_blank">Github</a></p>
