--- a/contrive.html
+++ b/contrive.html
@@ -43,7 +43,7 @@
 		</div><div class="three-quarters">
 			<div class="pad">
 				<h3 class="tensile-text-h5 rotunda" id="overview">Contrive Creativity</h3>
-				<p class="clamp-text">The CORE of Baroquest Framework is to inspire creativity by being a starting point to build off of. This is done by contriving a suite of utility class libraries and consolidating them into a singule CSS file: <strong><em>css/contrive.css</em></strong>.<br /><br />
+				<p class="clamp-text">The CORE of Baroquest Framework is to inspire creativity by being a starting point to build off of. This is done by contriving a suite of utility class libraries and consolidating them into a single CSS file: <strong><em>css/contrive.css</em></strong>.<br /><br />
 				All components specify the source of the CSS styling. These can be loaded and modified independently. CSS variables are used to specify certain values for some elements.</p>
 			</div>
 			
