--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<link href="css/contrive.css" type="text/css" rel="stylesheet" media="all"/>
 	<style>
 		header {position: relative;}
+		header a:link, header a:visited{color: var(--accent); border-bottom: 2px dotted var(--accent);}
+		header a:hover {color: var(--other); border-bottom: 2px dotted var(--other);}
 		.lattice-grid .blocklink {height: 50vh; max-height: 230px; text-align: center;
 			display:flex; align-items: center; justify-content: center;
 			flex-direction: column; font-size: 1.5rem; border: 0.75rem double var(--accent);
@@ -30,7 +32,7 @@
 <div class="trellis-grid">
 	<header class="pad center full">
 		<h1 class="tensile-text-h3 rotunda blur-in">Baroquest<br />Framework</h1>
-		<h2 class="caslon clamp-text delayed flip-in">An elegant framework for the Baroque style of design, built with HTML, CSS, and javascript.</h2>
+		<h2 class="caslon clamp-text delayed flip-in">An elegant framework for the <a href="https://www.baroquest.com" target="_blank">Baroque style of design</a>, built with HTML, CSS, and javascript.</h2>
 		<div class="accent micro t-l influence flip-y"></div><div class="accent micro t-r influence flip-xy"></div>
 		<div class="accent micro b-l influence"></div><div class="accent micro b-r influence flip-x"></div>
 	</header>
