--- a/contrive.html
+++ b/contrive.html
@@ -114,7 +114,7 @@
 				<ul class="clamp-text star">
 					<li><a href="https://gsap.com/" target="_blank" class="link">GSAP</a> <small>[scroll-triggered animations library]</small></li>
 					<li><a href="https://threejs.org/" target="_blank" class="link">three.js</a> <small>[3D animation library]</small></li>
-					<li><a href="https://locomotivemtl.github.io/locomotive-scroll/" target="_blank" class="link">Locomotive Scroll</a> <small>[scroll animation library]</small></li>
+					<li><a href="https://scroll.locomotive.ca/" target="_blank" class="link">Locomotive Scroll</a> <small>[scroll animation library]</small></li>
 					<li><a href="https://p5-brush.cargo.site/" target="_blank" class="link">p5.brush.js</a> <small>[artistic drawing library]</small></li>
 					<li><a href="https://amagi.dev/vfx-js/" target="_blank" class="link">VFX-JS</a> <small>[WebGL-powered effects library]</small></li>
 					<li><a href="https://github.com/piecesjs/piecesjs" target="_blank" class="link">piecesjs</a> <small>[front-end native web components]</small></li>
