--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<span class="btn-text">Downlaod</span>
 			<span class="btn-bg"></span><span class="btn-b"></span>
 		</a><br />
-		<a href="https://github.com/pinecreativelabs/Baroquest-Framework" target="_blank">GitHub Repo &raquo;</a>
+		<a href="https://github.com/pinecreativelabs/Baroquest-Framework" target="_blank" style="margin-top: -1.5em;">View on GitHub</a>
 	</div>
 	<div class="scroll-fancy fade-in two-thirds">
 		<h3 class="tensile-text-h4 bradley-gratis" style="margin: 0;">Fancy Features</h3>
