--- a/ltc-grid.html
+++ b/ltc-grid.html
@@ -186,6 +186,8 @@
 		</div></div>
 	</div>
 </div>
-
+<footer class="pad center bradley">
+	<p><a href="https://www.baroquest.com" target="_blank">Baroquest Framework</a> &copy; 2025</p>
+</footer>
 </body>
 </html>
