--- a/masquerade.html
+++ b/masquerade.html
@@ -159,6 +159,8 @@
 		</div></div>
 	</div>
 </div>
-
+<footer class="pad center bradley">
+	<p><a href="https://www.baroquest.com" target="_blank">Baroquest Framework</a> &copy; 2025</p>
+</footer>
 </body>
 </html>
