--- a/movements.html
+++ b/movements.html
@@ -45,7 +45,7 @@
 		</div><div class="three-quarters">
 			<div class="pad" id="overview">
 				<p><span class="source"><small>SOURCE:</small> css/movements.css</span></p>
-				<p class="clamp-text">A Baroquest site should give a sense of movement, ideeally in form of smooth and elegant motions. <em>Movements</em> is a collection of elements that utilizes CSS animations and javascript. These include scroll-triggered and other effects for an enhanced user experience.<br /><br />
+				<p class="clamp-text">A Baroquest site should give a sense of movement, ideally in form of smooth and elegant motions. <em>Movements</em> is a collection of elements that utilizes CSS animations and javascript. These include scroll-triggered and other effects for an enhanced user experience.<br /><br />
 				Some elements may require javascript, which are noted below.</p>
 			</div>
 			
@@ -92,40 +92,6 @@
 					</ol>
 				</div></div>
 			</div>
-			
-			<!-- ENTRANCES -->
-			<h3 class="tensile-text maranatha sf-section" id="entrances" style="margin-top: 0.5em;"><strong>Entrances</strong></h3>
-			<div class="pad">
-				<p class="clamp-text"><em>Entrances</em> are pure CSS animations that apply smooth entry or exit transitions to elements, such as popovers, modals, or other elements that change from a hidden (non-displayed) to a visible state. The animation duration is specified using the <strong><em>--dur</em></strong> variable. Apply any of the following classes to any element:</p>
-			</div>
-			<div class="trellis-grid row" style="margin-top: -1.5em;">
-				<div class="pad half">
-					<ul class="none clamp-text" style="font-weight: 600;">
-						<li>.blur-in</li><li>.drop-in</li>
-						<li>.flip-in</li><li>.glow-in</li>
-						<li>.grow-in</li><li>.pop-in</li>
-						<li>.roll-in</li><li>.slide-in</li>
-						<li>.spin-in</li><li>.splat-in</li>
-					</ul>
-				</div><div class="pad half">
-				<h4><strong><em>Demo:</em> Select a Class</strong></h4>
-				<select id="entrydemo" style="margin-bottom: 1rem;">
-					<option value="none">[none]</option>
-					<option value="blur-in">Blur-In</option>
-					<option value="drop-in">Drop-In</option>
-					<option value="flip-in">Flip-In</option>
-					<option value="glow-in">Glow-In</option>
-					<option value="grow-in">Grow-In</option>
-					<option value="pop-in">Pop-In</option>
-					<option value="roll-in">Roll-In</option>
-					<option value="slide-in">Slide-In</option>
-					<option value="spin-in">Spin-In</option>
-					<option value="splat-in">Splat-In</option>
-				</select>
-				<div id="grandEntry"><p class="center bradley-gratis tensile-text">Grand Entrance!</p></div>
-				<p class="spacebar"></p>
-				<p><span class="clamp-text"><strong>DELAYED.</strong></span><br />We can delay the animation by applying the class <strong><em>.delayed</em></strong>. The value is specified using the <em><strong>--delay</strong></em> variable.</p>
-			</div></div>
 			
 			<!-- WRITHEN SCROLL -->
 			<h3 class="tensile-text maranatha " id="writhen" style="margin-top: 0.5em;"><strong>Writhen Scroll</strong></h3>
@@ -175,6 +141,40 @@
 				<p class="spacebar"></p>
 			</div>
 			
+			<!-- ENTRANCES -->
+			<h3 class="tensile-text maranatha sf-section" id="entrances" style="margin-top: 0.5em;"><strong>Entrances</strong></h3>
+			<div class="pad">
+				<p class="clamp-text"><em>Entrances</em> are pure CSS animations that apply smooth entry or exit transitions to elements, such as popovers, modals, or other elements that change from a hidden (non-displayed) to a visible state. The animation duration is specified using the <strong><em>--dur</em></strong> variable. Apply any of the following classes to any element:</p>
+			</div>
+			<div class="trellis-grid row" style="margin-top: -1.5em;">
+				<div class="pad half">
+					<ul class="none clamp-text" style="font-weight: 600;">
+						<li>.blur-in</li><li>.drop-in</li>
+						<li>.flip-in</li><li>.glow-in</li>
+						<li>.grow-in</li><li>.pop-in</li>
+						<li>.roll-in</li><li>.slide-in</li>
+						<li>.spin-in</li><li>.splat-in</li>
+					</ul>
+				</div><div class="pad half">
+				<h4><strong><em>Demo:</em> Select a Class</strong></h4>
+				<select id="entrydemo" style="margin-bottom: 1rem;">
+					<option value="none">[none]</option>
+					<option value="blur-in">Blur-In</option>
+					<option value="drop-in">Drop-In</option>
+					<option value="flip-in">Flip-In</option>
+					<option value="glow-in">Glow-In</option>
+					<option value="grow-in">Grow-In</option>
+					<option value="pop-in">Pop-In</option>
+					<option value="roll-in">Roll-In</option>
+					<option value="slide-in">Slide-In</option>
+					<option value="spin-in">Spin-In</option>
+					<option value="splat-in">Splat-In</option>
+				</select>
+				<div id="grandEntry"><p class="center bradley-gratis tensile-text">Grand Entrance!</p></div>
+				<p class="spacebar"></p>
+				<p><span class="clamp-text"><strong>DELAYED.</strong></span><br />We can delay the animation by applying the class <strong><em>.delayed</em></strong>. The value is specified using the <em><strong>--delay</strong></em> variable.</p>
+			</div></div>
+			
 			<!-- CANVAS KINETICS -->
 			<h3 class="tensile-text maranatha sf-section" id="canvas" style="margin-top: 0.5em;"><strong>Canvas Kinetics</strong></h3>
 			<div class="pad">
@@ -189,6 +189,9 @@
 		</div></div>
 	</div>
 </div>
+<footer class="pad center bradley">
+	<p><a href="https://www.baroquest.com" target="_blank">Baroquest Framework</a> &copy; 2025</p>
+</footer>
 
 <!-- Entrance Demo -->
 <script>
