--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		</p>
 	</div><div class="pad left-align two-thirds">
 		<p class="caslon clamp-text" style="border-bottom: 1px solid var(--accent); padding: 0 0 1.33em 0;"><a href="https://github.com/pinecreativelabs/Baroquest-Framework" target="_blank">Github</a></p>
-		<p class="caslon">&copy;<a href="https://www.baroquest.com" target="_blank">Baroquest Framework</a>. A <a href="https://www.pinecreativelabs.com" target="_blank">Pine Creative Labs</a> production.</p>
+		<p class="caslon">&copy;<a href="https://www.baroquest.com" target="_blank">Baroquest Framework</a> &copy; 2026. A <a href="https://www.pinecreativelabs.com" target="_blank">Pine Creative Labs</a> production.</p>
 	</div>
 </div></footer>
 <script src="js/sequence-scroll.js"></script>
